--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Krishna Kumar - Resume</title>
+  <meta name="description" content="Resume of Krishna Kumar, an Engineering Lead and Senior Software Engineer with 15+ years of experience in web development, cloud technologies, and DevOps.">
+  <meta name="keywords" content="Krishna Kumar, Software Engineer, Web Development, Cloud Technologies, DevOps, React, Node.js, TypeScript, Golang, Azure, AWS, Google Cloud">
+  <meta name="author" content="Krishna Kumar">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://yourportfolio.com/resume">
+  <title>Krishna Kumar - Resume | Engineering Lead & Senior Software Engineer</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -57,91 +62,105 @@
       font-style: italic;
       color: #555;
     }
+    a:focus {
+      outline: 2px solid #2c3e50;
+      outline-offset: 2px;
+    }
   </style>
 </head>
 <body>
 
-  <h1>KRISHNA KUMAR</h1>
-  <h2>Engineering Lead | Senior Software Engineer</h2>
+  <!-- Header Section -->
+  <header role="banner">
+    <h1>KRISHNA KUMAR</h1>
+    <h2>Engineering Lead | Senior Software Engineer</h2>
+  </header>
 
-  <div class="contact-info">
-    <p><span class="icon">📍</span>Bengaluru, India</p>
-    <p><span class="icon">📞</span>(+91) 8447883963</p>
-    <p><span class="icon">✉️</span>krishnakumar.s.s@outlook.com</p>
-    <p><span class="icon">🔗</span>[LinkedIn Profile] | [GitHub Profile] | [Portfolio Website]</p>
-  </div>
+  <!-- Contact Information -->
+  <section class="contact-info" aria-labelledby="contact-heading">
+    <h2 id="contact-heading" role="heading">Contact Information</h2>
+    <p><span class="icon" aria-hidden="true">📍</span>Bengaluru, India</p>
+    <p><span class="icon" aria-hidden="true">📞</span><a href="tel:+918447883963" aria-label="Phone number: +91 8447883963">(+91) 8447883963</a></p>
+    <p><span class="icon" aria-hidden="true">✉️</span><a href="mailto:krishnakumar.s.s@outlook.com" aria-label="Email: krishnakumar.s.s@outlook.com">krishnakumar.s.s@outlook.com</a></p>
+    <p><span class="icon" aria-hidden="true">🔗</span>
+      <a href="https://linkedin.com/in/yourprofile" aria-label="LinkedIn profile">LinkedIn</a> | 
+      <a href="https://github.com/yourusername" aria-label="GitHub profile">GitHub</a> | 
+      <a href="https://yourportfolio.com" aria-label="Portfolio website">Portfolio</a>
+    </p>
+  </section>
 
-  <div class="section">
-    <h2>SUMMARY</h2>
+  <!-- Summary Section -->
+  <section class="section" aria-labelledby="summary-heading">
+    <h2 id="summary-heading" role="heading">Summary</h2>
     <p>Seasoned <strong>Engineering Lead</strong> with <strong>15+ years of experience</strong> in software development, specializing in <strong>web front-end development</strong>, <strong>cloud technologies</strong>, and <strong>DevOps practices</strong>. Proven track record of delivering high-quality software solutions, leading cross-functional teams, and driving innovation in domains like <strong>e-commerce</strong>, <strong>communication services</strong>, and <strong>web applications</strong>. Adept at optimizing performance, managing large-scale infrastructure, and implementing cutting-edge technologies.</p>
-  </div>
+  </section>
 
-  <div class="section">
-    <h2>TECHNICAL SKILLS</h2>
+  <!-- Technical Skills Section -->
+  <section class="section" aria-labelledby="skills-heading">
+    <h2 id="skills-heading" role="heading">Technical Skills</h2>
     <ul>
-      <li><span class="icon">💻</span><strong>Languages:</strong> JavaScript, TypeScript, Node.js, Golang, PHP, Rust, C#</li>
-      <li><span class="icon">🛠️</span><strong>Frameworks:</strong> React, Express, ASP.NET</li>
-      <li><span class="icon">🗃️</span><strong>Databases:</strong> Cosmos DB, PostgreSQL, MongoDB, CouchDB, DynamoDB</li>
-      <li><span class="icon">🔧</span><strong>Tools:</strong> Docker, Kubernetes, Jenkins, BuildKite, CircleCI, Prometheus, Datadog, Grafana</li>
-      <li><span class="icon">☁️</span><strong>Cloud:</strong> AWS, Azure, Google Cloud</li>
-      <li><span class="icon">🚀</span><strong>Other:</strong> Agile & Scrum, SRE Practices, CI/CD Pipelines, Web Development, Mobile Web, LLM, Copilot Agents</li>
+      <li><span class="icon" aria-hidden="true">💻</span><strong>Languages:</strong> JavaScript, TypeScript, Node.js, Golang, PHP, Rust, C#</li>
+      <li><span class="icon" aria-hidden="true">🛠️</span><strong>Frameworks:</strong> React, Express, ASP.NET</li>
+      <li><span class="icon" aria-hidden="true">🗃️</span><strong>Databases:</strong> Cosmos DB, PostgreSQL, MongoDB, CouchDB, DynamoDB</li>
+      <li><span class="icon" aria-hidden="true">🔧</span><strong>Tools:</strong> Docker, Kubernetes, Jenkins, BuildKite, CircleCI, Prometheus, Datadog, Grafana</li>
+      <li><span class="icon" aria-hidden="true">☁️</span><strong>Cloud:</strong> AWS, Azure, Google Cloud</li>
+      <li><span class="icon" aria-hidden="true">🚀</span><strong>Other:</strong> Agile & Scrum, SRE Practices, CI/CD Pipelines, Web Development, Mobile Web, LLM, Copilot Agents</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="section">
-    <h2>PROFESSIONAL EXPERIENCE</h2>
+  <!-- Professional Experience Section -->
+  <section class="section" aria-labelledby="experience-heading">
+    <h2 id="experience-heading" role="heading">Professional Experience</h2>
 
-    <h3><span class="icon">💼</span>Senior Software Engineer</h3>
-    <p><strong>Microsoft R&D</strong> | <em>September 2019 – Present</em></p>
-    <ul>
-      <li>Led the delivery of key product features for <strong>Microsoft Teams</strong> and <strong>SharePoint</strong>, improving user experience and functionality.</li>
-      <li>Developed shareable components for modern SharePoint search, utilized across multiple Microsoft products.</li>
-      <li>Managed a vendor team of <strong>7+ members</strong>, ensuring timely delivery and high-quality code.</li>
-      <li>Championed roles such as <strong>Clean Code Champion</strong>, <strong>Security Champion</strong>, and <strong>Unit Testing Champion</strong>.</li>
-      <li>Implemented Agile methodologies, reducing project delivery time by <strong>20%</strong>.</li>
-      <li><strong>Technologies:</strong> React, Node.js, TypeScript, C#, Azure, Cosmos DB</li>
-    </ul>
+    <article aria-labelledby="microsoft-heading">
+      <h3 id="microsoft-heading" role="heading"><span class="icon" aria-hidden="true">💼</span>Senior Software Engineer</h3>
+      <p><strong>Microsoft R&D</strong> | <em>September 2019 – Present</em></p>
+      <ul>
+        <li>Led the delivery of key product features for <strong>Microsoft Teams</strong> and <strong>SharePoint</strong>, improving user experience and functionality.</li>
+        <li>Developed shareable components for modern SharePoint search, utilized across multiple Microsoft products.</li>
+        <li>Managed a vendor team of <strong>7+ members</strong>, ensuring timely delivery and high-quality code.</li>
+        <li>Championed roles such as <strong>Clean Code Champion</strong>, <strong>Security Champion</strong>, and <strong>Unit Testing Champion</strong>.</li>
+        <li>Implemented Agile methodologies, reducing project delivery time by <strong>20%</strong>.</li>
+        <li><strong>Technologies:</strong> React, Node.js, TypeScript, C#, Azure, Cosmos DB</li>
+      </ul>
+    </article>
 
-    <h3><span class="icon">💼</span>Senior Software Engineer</h3>
-    <p><strong>Walmart Global Tech</strong> | <em>December 2017 – September 2019</em></p>
-    <ul>
-      <li>Led the migration of <strong>Walmart Mexico</strong> website to a modern tech stack, improving loading speed by <strong>40%</strong>.</li>
-      <li>Optimized <strong>Sam’s Club</strong> website performance by <strong>30%</strong>, enhancing user experience and conversion rates.</li>
-      <li>Implemented a cached API router to handle scalable traffic for web and mobile apps.</li>
-      <li>Built a Golang proxy microservice for routing orders, improving website performance by <strong>30%</strong>.</li>
-      <li><strong>Technologies:</strong> React, Node.js, Golang, OneOps, Jenkins, Docker</li>
-    </ul>
+    <article aria-labelledby="walmart-heading">
+      <h3 id="walmart-heading" role="heading"><span class="icon" aria-hidden="true">💼</span>Senior Software Engineer</h3>
+      <p><strong>Walmart Global Tech</strong> | <em>December 2017 – September 2019</em></p>
+      <ul>
+        <li>Led the migration of <strong>Walmart Mexico</strong> website to a modern tech stack, improving loading speed by <strong>40%</strong>.</li>
+        <li>Optimized <strong>Sam’s Club</strong> website performance by <strong>30%</strong>, enhancing user experience and conversion rates.</li>
+        <li>Implemented a cached API router to handle scalable traffic for web and mobile apps.</li>
+        <li>Built a Golang proxy microservice for routing orders, improving website performance by <strong>30%</strong>.</li>
+        <li><strong>Technologies:</strong> React, Node.js, Golang, OneOps, Jenkins, Docker</li>
+      </ul>
+    </article>
+  </section>
 
-    <h3><span class="icon">💼</span>Senior Software Developer</h3>
-    <p><strong>Saltside Technologies</strong> | <em>May 2016 – December 2017</em></p>
-    <ul>
-      <li>Migrated legacy code to a modern stack (<strong>React + Webpack</strong>), improving development efficiency by <strong>35%</strong>.</li>
-      <li>Developed a configuration-driven web system deployed across <strong>4 countries</strong>.</li>
-      <li>Implemented an ads provider service, increasing advertisement revenue by <strong>25%</strong>.</li>
-      <li><strong>Technologies:</strong> React, Node.js, Golang, Docker, Kubernetes, AWS</li>
-    </ul>
-  </div>
-
-  <div class="section">
-    <h2>EDUCATION</h2>
-    <p><span class="icon">🎓</span><strong>Master of Computer Applications (MCA)</strong></p>
+  <!-- Education Section -->
+  <section class="section" aria-labelledby="education-heading">
+    <h2 id="education-heading" role="heading">Education</h2>
+    <p><span class="icon" aria-hidden="true">🎓</span><strong>Master of Computer Applications (MCA)</strong></p>
     <p><em>TKM College of Engineering, Kerala University</em></p>
-  </div>
+  </section>
 
-  <div class="section">
-    <h2>ACHIEVEMENTS</h2>
+  <!-- Achievements Section -->
+  <section class="section" aria-labelledby="achievements-heading">
+    <h2 id="achievements-heading" role="heading">Achievements</h2>
     <ul>
-      <li><span class="icon">🏆</span><strong>Hackathon Award:</strong> Created the <strong>Tesseract</strong> tool for one-click team settings.</li>
-      <li><span class="icon">🏅</span><strong>Best Web Developer:</strong> Recognized at <strong>Saltside Technologies</strong>.</li>
-      <li><span class="icon">🏅</span><strong>Best Employee Award:</strong> Honored at <strong>One.Com</strong>.</li>
-      <li><span class="icon">🏅</span><strong>CRR1 Rating:</strong> Consistently Remarkable Performer at <strong>Infosys</strong>.</li>
+      <li><span class="icon" aria-hidden="true">🏆</span><strong>Hackathon Award:</strong> Created the <strong>Tesseract</strong> tool for one-click team settings.</li>
+      <li><span class="icon" aria-hidden="true">🏅</span><strong>Best Web Developer:</strong> Recognized at <strong>Saltside Technologies</strong>.</li>
+      <li><span class="icon" aria-hidden="true">🏅</span><strong>Best Employee Award:</strong> Honored at <strong>One.Com</strong>.</li>
+      <li><span class="icon" aria-hidden="true">🏅</span><strong>CRR1 Rating:</strong> Consistently Remarkable Performer at <strong>Infosys</strong>.</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="section">
-    <h2>KEYWORDS FOR ATS</h2>
+  <!-- Keywords Section -->
+  <section class="section" aria-labelledby="keywords-heading">
+    <h2 id="keywords-heading" role="heading">Keywords for ATS</h2>
     <p class="keywords">Software Engineering, Web Development, Front-End Development, React, Node.js, TypeScript, Golang, Azure, AWS, Google Cloud, DevOps, SRE, Agile, Scrum, CI/CD, Docker, Kubernetes, PostgreSQL, MongoDB, Cosmos DB, Microsoft Teams, SharePoint, E-Commerce, API Development, Cloud Computing, Leadership, Team Management.</p>
-  </div>
+  </section>
 
 </body>
 </html>
